# wdms2prod

./: .gitignore  Cargo.toml  README.md
wdms_rust1/: Cargo.toml  df_20.json  df_20.parquet  j.parquet
wdms_rust1/res/examples/: wellLog_v3_120.json
wdms_rust1/res/schemas/work-product-component/: WellLog.1.0.0.json  WellLog.1.2.0.json  WellboreTrajectory.1.0.0.json
wdms_rust1/src/: main.rs  parquetter.rs  record.rs
wdms_rust2/: Cargo.toml
wdms_rust2/benches/: my_bench.rs
wdms_rust2/res/schemas/abstract/: AbstractAccessControlList.1.0.0.json  AbstractBinGrid.1.0.0.json  AbstractContact.1.0.0.json  AbstractFacet.1.0.0.json  AbstractFacilityEvent.1.0.0.json  AbstractFacilitySpecification.1.0.0.json  AbstractFacilityVerticalMeasurement.1.0.0.json  AbstractFeatureCollection.1.0.0.json  AbstractFile.1.0.0.json  AbstractFileCollection.1.0.0.json  AbstractFileSourceInfo.1.0.0.json  AbstractGeoContext.1.0.0.json  AbstractGeoFieldContext.1.0.0.json  AbstractGeoPlayContext.1.0.0.json  AbstractGeoProspectContext.1.0.0.json  AbstractGridRepresentation.1.0.0.json  AbstractIjkGridFlowSimulationBoundaryConnection.1.0.0.json  AbstractMaster.1.0.0.json  AbstractMaster.1.1.0.json  AbstractPersistableReference.1.0.0.json  AbstractProjectActivity.1.0.0.json  AbstractReferencePropertyType.1.1.0.json  AbstractReferenceType.1.0.0.json  AbstractRepresentation.1.0.0.json  AbstractSpatialReference.1.0.0.json  AbstractStorageLocation.1.0.0.json  AbstractSystemProperties.1.0.0.json  AbstractTechnicalAssurance.1.0.0.json  AbstractUnstructuredGridPatch.1.0.0.json  AbstractWPCActivity.1.0.0.json  AbstractWorkProductComponent.1.1.0.json
wdms_rust2/res/schemas/data-collection/: DataCollection.1.0.0.json
wdms_rust2/src/: lib.rs  main.rs  record.rs  validation.rs  version.rs
(+880 files in other folders)
