[package]
name = "wdms_rust2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wdms_rust2"


[dependencies]
serde_json = "1.0"
jsonschema = { version = "0.16", default-features = false, features = ["draft201909", "draft202012"] }
url = "2"
lazy_static = "1.4"
actix-web = "4"
env_logger = "0.9"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_bench"
harness = false  # as we provided the main
